[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/scripts/SettingsScene.gd" type="Script" id=1]
[ext_resource path="res://assets/images/icons/CD-icon.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/cd.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/musicOn.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/musicOff.png" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/united-kingdom.png" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/turkey.png" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/slider.png" type="Texture" id=8]
[ext_resource path="res://assets/images/icons/ball-grey.png" type="Texture" id=9]
[ext_resource path="res://assets/images/icons/ball-black.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://assets/fonts/Rationale-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://assets/fonts/Rationale-Regular.ttf"

[sub_resource type="DynamicFont" id=4]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

hinting = 2
font_path = "res://assets/fonts/Rationale-Regular.ttf"

[sub_resource type="DynamicFont" id=6]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=7]

hinting = 2
font_path = "res://assets/fonts/Rationale-Regular.ttf"

[sub_resource type="DynamicFont" id=8]

size = 50
use_mipmaps = false
use_filter = false
font_data = SubResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 911, 189 ), Vector2( 1, 189 ) ]
}

[node name="SettingsScene" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="SettingsLabel" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_top = 20.0
margin_right = 547.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 189.0
margin_right = 750.0
margin_bottom = 984.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ColorRect" type="ColorRect" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.328125, 0.186002, 0.108948, 1 )
_sections_unfolded = [ "Rect" ]

[node name="MusicSoundLabel" type="Label" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 178.0
margin_right = 218.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Music"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="MusicOnButton" type="TouchScreenButton" parent="Control" index="2"]

position = Vector2( 258.493, 178.644 )
scale = Vector2( 0.248654, 0.248654 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="MusicOffButton" type="TouchScreenButton" parent="Control" index="3"]

position = Vector2( 256.493, 175.644 )
scale = Vector2( 0.126628, 0.126628 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="EffectLabel" type="Label" parent="Control" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 375.0
margin_right = 231.0
margin_bottom = 434.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Effect"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="EffectOnButton" type="TouchScreenButton" parent="Control" index="5"]

position = Vector2( 269.442, 376.261 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="EffectOffButton" type="TouchScreenButton" parent="Control" index="6"]

position = Vector2( 269.91, 375.926 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="LanguageLabel" type="Label" parent="Control" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 569.0
margin_right = 299.0
margin_bottom = 628.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
text = "LANGUAGE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="EnglishButton" type="TouchScreenButton" parent="Control" index="8"]

position = Vector2( 344.355, 531.519 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TurkishButton" type="TouchScreenButton" parent="Control" index="9"]

position = Vector2( 344.355, 534 )
scale = Vector2( 1, 0.960938 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="MusicHSlider" type="HSlider" parent="Control" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 441.0
margin_top = 181.0
margin_right = 674.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "Rect", "custom_icons", "custom_styles" ]

[node name="EffectHSlider" type="HSlider" parent="Control" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 441.0
margin_top = 370.0
margin_right = 674.0
margin_bottom = 433.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "Rect", "custom_icons", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SettingsAnim = SubResource( 9 )
blend_times = [  ]

[connection signal="pressed" from="Control/MusicOnButton" to="." method="_on_MusicOnButton_pressed"]

[connection signal="pressed" from="Control/MusicOffButton" to="." method="_on_MusicOffButton_pressed"]

[connection signal="pressed" from="Control/EffectOnButton" to="." method="_on_EffectOnButton_pressed"]

[connection signal="pressed" from="Control/EffectOffButton" to="." method="_on_EffectOffButton_pressed"]

[connection signal="pressed" from="Control/EnglishButton" to="." method="_on_EnglishButton_pressed"]

[connection signal="pressed" from="Control/TurkishButton" to="." method="_on_TurkishButton_pressed"]

[connection signal="value_changed" from="Control/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]

[connection signal="value_changed" from="Control/EffectHSlider" to="." method="_on_EffectHSlider_value_changed"]


